# d2l-pytorch-notes

./: 1-data-manipulation.ipynb  10-cnn.ipynb  2-data-preprocessing.ipynb  3-linear-algebra.ipynb  4-calculus.ipynb  5-automatic-differentiation.ipynb  6-linear-regression.ipynb  7-linear-classification.ipynb  8-multilayer-perceptrons.ipynb  9-builders'-guide.ipynb  README.md  pyproject.toml
